--- a/server/.platform.app.yaml
+++ b/server/.platform.app.yaml
@@ -9,6 +9,9 @@ name: app
 # to find the supported versions for the 'python' type.
 type: "python:3.11"
 
+dependencies:
+  python3:
+    pipenv: "2023.12.1"
 # The following block defines a single writable directory, 'web/uploads'
 # The 'source' specifies where the writable mount is. The 'local' source
 # indicates that the mount point will point to a local directory on the
